--- a/MyBookList/MyHobbyList.csproj
+++ b/MyBookList/MyHobbyList.csproj
@@ -253,8 +253,6 @@
     <Compile Include="Models\UserData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\Admin\AdminPanelBannedView.cs" />
-    <Compile Include="ViewModels\Admin\AdminPanelIndexView.cs" />
     <Compile Include="ViewModels\CommentViewModel.cs" />
     <Compile Include="ViewModels\EntityDetails.cs" />
     <Compile Include="ViewModels\EntityForms.cs" />
@@ -380,11 +378,14 @@
     <Content Include="Content\demos.css" />
     <Content Include="Content\jquery.Jcrop.css" />
     <Content Include="Content\main.css" />
+    <Content Include="Content\styles\AdminStyles.css" />
     <Content Include="Content\styles\DetailsPage.css" />
     <Content Include="Content\styles\MainPage.css" />
     <Content Include="Content\Images\graystar.png" />
     <Content Include="Content\Images\WithBook.png" />
     <Content Include="Content\styles\Modals.css" />
+    <Content Include="Content\styles\RecommendModal.css" />
+    <Content Include="Content\styles\UserStyles.css" />
     <Content Include="Content\toastr.css" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="Content\Images\WithGame.jpg" />
@@ -554,6 +555,7 @@
     <Content Include="Views\Shared\_Recommend.cshtml" />
     <Content Include="Views\Admin\UserIndex.cshtml" />
     <Content Include="Views\Admin\Tickets.cshtml" />
+    <Content Include="Views\UserProfile\_Recommends.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
