--- a/MyBookList/Web.config
+++ b/MyBookList/Web.config
@@ -5,12 +5,12 @@
   -->
 <configuration>
   <configSections>
-	
+	<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 	<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=myhobbylistdbserver.database.windows.net;Initial Catalog=MyHobbyList_db12;Integrated Security=False;User ID=Isildir;Password=Xp250701;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />-->
-	  <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\JCropMVCDB.mdf;Initial Catalog=JCropMVCDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+     <add name="DefaultConnection" connectionString="Data Source=myhobbylistdbserver.database.windows.net;Initial Catalog=MyHobbyList_db12;Integrated Security=False;User ID=Isildir;Password=Xp250701;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+     <!-- <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\JCropMVCDB.mdf;Initial Catalog=JCropMVCDB;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
 	<add key="webpages:Version" value="3.0.0.0" />
@@ -25,6 +25,7 @@
 	<httpModules>
 	  <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
 	</httpModules>
+    <customErrors mode="Off"></customErrors>
   </system.web>
   <system.webServer>
 	<modules>
